2024-09-01 25
  * removed directory aggregate data from index: hardly used,
    save space and time
  * integrated libmount to mount/umount. Used when --mount-command,
    --unmount-command are not set (empty).
  * BARControl: added test function
  * fixed execute pre/post commands: run also for slave jobs
  * fixed locking entities when adding storages to index
  * fixed handling verbose level: do not reset in service script

2024-07-13 24a
  * fixed long blocking of database at clean
  * fixed upgrade database, fixed memory leak
  * test/compare/extract: reduced thread overhead if only a
    single thread is used
  * fixed duplicated error message when parsing command line
    arguments
  * fixed byte units
  * BARControl: fixed add unreadable directory content to index
  * BARControl: fixed add single archive to index

2024-05-08 24
  * added support to create PAR2 checksum files
  * integrated libisofs: create ISO 9660 images without external
    tools. Used when --(cd|dvd|bd)-image-command are not set
    (empty)
  * integrated libburn: write CD/DVD/BD without external tools.
    Used when --(cd|dvd|bd)-[write|write-image|load-volume|
    unload-volume]-command are not set (empty)

2024-03-28 23b
  * fixed write CD/DVD/BD
  * added verify CD/DVD/BD: growisofs does not always return
    an exit code on failure. Thus read the data back which was
    just written and compare.
  * BARControl: fixed request CD/DVD/BD volume
  * BARControl: improved CD/DVD/BD messages

2024-01-27 23a
  * fixed scheduler trigger job, check time (1min instead every
    10s)
  * BARControl: fixed option --index-database-entries-list:
    also list storages
  * BARControl: added options --long-format, --no-header-footer
  * BARControl: fixed sort job list

2024-01-14 23
  * changed version number scheme: single number
  * added support for storing on Samba/CIFS server
  * added execute ECC commands for device
  * experimental Windows support!