@@ -1027,7 +1027,6 @@ LOCAL Errors importIndexVersion7(DatabaseHandle *oldDatabaseHandle,
                                                  maxSteps,
                                                  CALLBACK_(outputProgressInit,NULL),
                                                  CALLBACK_(outputProgressDone,NULL),
-//                                                 CALLBACK_(outputProgressInfo,NULL),
                                                  CALLBACK_(formatProgressInfo,NULL),
                                                  "Import entity #%"PRIi64" '%s': ",
                                                  fromEntityId,
