@@ -1,3 +1,6 @@
+2024-09-01 26
+  * automatic replace deprecated configuration values by new value
+
 2024-09-01 25
   * removed directory aggregate data from index: hardly used,
     save space and time
